🐛 Fixed bug that caused click to not register on dark mode

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -15,6 +15,7 @@ header {
       opacity: 0;
       visibility: hidden;
     }
+    pointer-events: none;
   }
 
   .dark-mode-toggle {
